# jwql

./: .bandit  .bandit.yml  .gitignore  .pep8speaks.yml  .pyup-requirements.txt  .pyup.yml  .readthedocs.yaml  CHANGES.rst  CODE_OF_CONDUCT.md  Dockerfile  Jenkinsfile  JenkinsfileRT  LICENSE  MANIFEST.in  README.md  WEBPAGE_TEMPLATE.md  codecov.yml  environment.yml  environment_pipeline.sh  environment_pipeline.yml  environment_python_3.10.yml  environment_python_3.9.yml  environment_python_3_10.yml  environment_python_3_5.yml  environment_python_3_6.yml  environment_python_3_7.yml  environment_python_3_7_with_bokeh2.1.1.yml  environment_python_3_8.yml  environment_python_3_9.yml  environmentpy36.yml  example.py  msata_layout.html  pyproject.toml  pytest.ini  readthedocs.yml  requirements.txt  rtd_requirements.txt  setup.py  style_guide.md  version.py  (+1 more)
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml  lint.yml  python-package-conda.yml  ruff.yml
bokeh_templating/: bokeh_surface.py  factory.py  template.py
bokeh_templating/example/: main.py
database/: database_interface.py
docs/: Makefile  environment.yml
docs/source/: api_docs.rst  bokeh_templating.rst  common_monitors.rst  conf.py  database.rst  dbmonitor.rst  edb.rst  index.rst  instrument_monitors.rst  jwql_monitors.rst  logging.rst  monitor_filesystem.rst  monitor_mast.rst  permissions.rst  preview_image.rst  tests.rst  utils.rst  website.rst
fitsviewer/: bokeh_surface.py  factory.py  interface.yaml  main.py
fitsviewer/templates/: b.css  index.html  styles.css
header_keywords/: extract_schema.py  header_keywords_FGS_guider1_1_SCI.txt  header_keywords_FGS_guider1_2B_PRIMARY.txt  header_keywords_FGS_guider1_3_PRIMARY.txt  header_keywords_FGS_guider2_1_PRIMARY.txt  header_keywords_FGS_guider2_2A_PRIMARY.txt  header_keywords_MIRI_mirifulong_1_PRIMARY.txt  header_keywords_MIRI_mirifulong_2B_GROUPDQ.txt  header_keywords_MIRI_mirifulong_2B_REFOUT.txt  header_keywords_MIRI_mirifushort_2A_GROUP.txt  header_keywords_MIRI_mirifushort_2A_PRIMARY.txt  header_keywords_MIRI_mirifushort_2B_PRIMARY.txt  header_keywords_MIRI_mirifushort_2B_SCI.txt  header_keywords_MIRI_mirifushort_3_PRIMARY.txt  header_keywords_MIRI_mirimage_1_PRIMARY.txt  header_keywords_MIRI_mirimage_2A_GROUP.txt  header_keywords_MIRI_mirimage_2A_PRIMARY.txt  header_keywords_MIRI_mirimage_2B_PRIMARY.txt  header_keywords_MIRI_mirimage_3_PRIMARY.txt  header_keywords_NIRCAM_nrca1_2B_PRIMARY.txt  header_keywords_NIRCAM_nrca1_3_PRIMARY.txt  header_keywords_NIRCAM_nrca2_2A_SCI.txt  header_keywords_NIRCAM_nrca3_1_PRIMARY.txt  header_keywords_NIRCAM_nrca3_2A_CHEBY.txt  header_keywords_NIRCAM_nrcb1_2A_PRIMARY.txt  header_keywords_NIRCAM_nrcb2_2B_ZEROFRAME.txt  header_keywords_NIRCAM_nrcb4_2B_SCI.txt  header_keywords_NIRISS_niriss_3_PRIMARY.txt  header_keywords_NIRISS_nis_1_PRIMARY.txt  header_keywords_NIRISS_nis_2A_PRIMARY.txt  header_keywords_NIRISS_nis_2B_PRIMARY.txt  header_keywords_NIRSPEC_nrs1_2A_PRIMARY.txt  header_keywords_NIRSPEC_nrs1_2B_PRIMARY.txt  header_keywords_NIRSPEC_nrs1_3_SCI.txt  header_keywords_NIRSPEC_nrs2_1_PRIMARY.txt  header_keywords_NIRSPEC_nrs2_3_PRIMARY.txt  run_extract_schema.py
jwql/: __init__.py  environment.yml  example_config.json  install-env.sh  pull_jwql_branch.sh
jwql/bokeh_templating/: __init__.py  bokeh_surface.py  factory.py  keyword_map.py  surface3d.py  template.py
jwql/database/: clone_tables.py  database_interface.py  generate_tables.py  miri_database.db  nirspec_database.db  reset_database.py
jwql/dbmonitor/: dbmonitor.py
jwql/edb/: edb_interface.py  engdb_oss_msgs.py  engineering_database.py
jwql/filesystem_mon/: monitor_filesystem.py  run_filesystem_monitor.py
jwql/instrument_monitors/: monitor.py  pipeline_tools.py
jwql/interface_engineering_database/: interface_edb.py
jwql/jwql_monitors/: bias.py  clean_locks.py  create_initial_preview_and_thumbnail_listfiles.py  generate_preview_images.py  generate_proposal_thumbnails.py  monitor_cron_jobs.py  monitor_filesystem.py  monitor_mast.py  monitor_ta.py  remove_inventory_items.py
jwql/logging/: logging_functions.py
jwql/monitor_filesystem/: monitor_filesystem.py  run_filesystem_monitor.py
jwql/monitor_mast/: monitor_mast.py
jwql/permissions/: permissions.py
jwql/preview_image/: generate_preview_images.py  preview_image.py
jwql/shared_tasks/: celery_cheatsheet.md  run_pipeline.py  shared_tasks.py
jwql/tests/: resources.py  test_api_views.py  test_bad_pixel_monitor.py  test_badpix_monitor.py  test_bias.py  test_bias_monitor.py  test_bokeh_templating.py  test_bokeh_templating_interface.yaml  test_dbmonitor.py  (+30 more)
logging/: logging_functions.py
notebooks/: database_anomoly_table.ipynb  edb_mnemonic_query.ipynb  integrating_auth_mast_service.ipynb  keywords_in_multiple_headers.ipynb  test_mast_api.ipynb
permissions/: permissions.py  test_permissions.py
preview_image/: preview_image.py
style_guide/: PEP8_examples.ipynb  README.md  accessibility_guidelines.md  example.py  logging_guide.md  style_guide.md
typing_demo/: typing_demo_2.py  typing_demo_4.py
utils/: utils.py
website/: db.sqlite3  manage.py  webapp_styleguide.key
(+480 files in other folders)
