[project]
name = "jwql"
description = "The James Webb Space Telescope Quicklook Project"
readme = "README.md"
authors = [
  { name = "Matthew Bourque" },
  { name = "Lauren Chambers" },
  { name = "Misty Cracraft" },
  { name = "Mike Engesser" },
  { name = "Mees Fix" },
  { name = "Joe Filippazzo" },
  { name = "Bryan Hilbert" },
]
keywords = ["astronomy", "python"]
classifiers = ["Programming Language :: Python"]
dependencies = [
  "asdf",
  "astropy",
  "astroquery",
  "bandit",
  "beautifulsoup4",
  "bokeh>=3",
  "celery",
  "crds",
  "cryptography",
  "django",
  "inflection",
  "jinja2",
  "jsonschema",
  "jwst",
  "jwst_backgrounds",
  "jwst_reffiles",
  "matplotlib",
  "nodejs",
  "numpy",
  "numpydoc",
  "pandas",
  "pip",
  "postgres",
  "psycopg2-binary",
  "pysiaf",
  "pysqlite3",
  "pytest-cov",
  "pytest-mock",
  "pyvo",
  "pyyaml",
  "redis",
  "scipy",
  "selenium",
  "setuptools",
  "sphinx",
  "sphinx_rtd_theme",
  "sqlalchemy",
  "stdatamodels",
  "twine",
  "vine",
  "wtforms",
  "jwst_reffiles@git+https://github.com/spacetelescope/jwst_reffiles"
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "pytest-mock",
]
docs = [
  "sphinx",
  "sphinx_rtd_theme",
  "stsci_rtd_theme",
]

[project.license]
file = "LICENSE"
content-type = "text/plain"

[build-system]
requires = ["setuptools>=68.0.0", "numpy", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = false

[tool.setuptools_scm]

[tool.pytest]
junit_family = "xunit2"

[tool.pytest.ini_options]
norecursedirs = ["jwql/website/apps/jwql/static"]