[project]
name = "jwql"
description = "The James Webb Space Telescope Quicklook Project"
readme = "README.md"
authors = [
    { name = "Matthew Bourque" },
    { name = "Lauren Chambers" },
    { name = "Misty Cracraft" },
    { name = "Mike Engesser" },
    { name = "Mees Fix" },
    { name = "Joe Filippazzo" },
    { name = "Bryan Hilbert" },
]
keywords = [
    "astronomy",
    "python",
]
classifiers = [
    "Programming Language :: Python",
]
dependencies = [
    "asdf>=3.1.0,<4",
    "astropy>=6.0,<7",
    "astroquery>=0.4.7,<0.5.0",
    "beautifulsoup4>=4.12.3,<5",
    "bokeh>=3.4.0,<4",
    "celery>=5.3.6,<6",
    "crds>=11.17.19,<12",
    "django>=5.0.3,<6",
    "gunicorn>=22.0.0,<23.0.0",
    "inflection>=0.5.1,<0.6",
    "jsonschema>=4.21.1,<5",
    "jwst>=1.13.4,<2",
    "jwst_backgrounds>=1.2.0,<1.3.0",
    "jwst_reffiles>=1.0.1",
    "matplotlib>=3.8.3,<4",
    "numpy>=1.26.4,<2",
    "pandas>=2.2.1,<3",
    "psycopg2-binary>=2.9.9,<3",
    "pysiaf>=0.22.0",
    "pyvo>=1.5.1,<2",
    "redis>=5.0.3,<6",
    "scipy>=1.12.0,<2",
    "selenium>=4.18.1,<5",
    "sqlalchemy>=2.0.29,<3",
    "wtforms>=3.1.2,<4",
]
dynamic = [
    "version",
]
requires-python = ">=3.10"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
]
docs = [
    "numpydoc",
    "sphinx",
    "sphinx_rtd_theme",
    "stsci_rtd_theme",
    "sphinx_automodapi",
]

[project.license]
file = "LICENSE"
content-type = "text/plain"

[build-system]
requires = [
    "setuptools>=68.0.0",
    "numpy>=2.0.0rc2",
    "wheel",
    "setuptools_scm",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = false

[tool.setuptools_scm]

[tool.pytest]
junit_family = "xunit2"

[tool.pytest.ini_options]
norecursedirs = [
    "jwql/website/apps/jwql/static",
]
